--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 20b48507-b52b-49bc-93b4-90ef114532fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇨🇳 中国-635.7KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-440.8KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇨🇳 中国-469.1KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇨🇦 加拿大-295.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 20b48507-b52b-49bc-93b4-90ef114532fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 卢森堡-7.64MB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: f5f239fc-d21a-45ba-aeaf-b137d7d730a6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇫🇷 法国-396.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-433.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 卢森堡-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 卢森堡-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 卢森堡-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 卢森堡-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 卢森堡-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 卢森堡-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 卢森堡-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
