--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-469.1KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇨🇦 加拿大-295.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 20b48507-b52b-49bc-93b4-90ef114532fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 卢森堡-7.64MB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: f5f239fc-d21a-45ba-aeaf-b137d7d730a6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇫🇷 法国-396.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-204.7KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
   - {name: 🇬🇧 英国-433.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.91MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.11MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 卢森堡-7.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 卢森堡-7.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 卢森堡-7.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 卢森堡-7.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 卢森堡-7.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 卢森堡-7.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-295.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 卢森堡-7.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
