--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-396.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-204.7KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇬🇧 英国-433.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.91MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.11MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 45.78.78.62, port: 38212, type: vmess, uuid: 5349d03e-7ef8-4aa1-e8a3-87d6f0fcd9c0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.04MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 20b48507-b52b-49bc-93b4-90ef114532fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇬🇧 英国-1.94MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 捷克-167.5KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
+  - {name: 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-396.5KB/s(Youtube:不良林), server: 141.94.141.20, port: 80, type: vmess, uuid: e20d4b49-06e4-4923-ae85-b2e78344b603, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 141.94.141.20}}
+  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
+      - 捷克-167.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
+      - 捷克-167.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
+      - 捷克-167.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
+      - 捷克-167.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
+      - 捷克-167.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
+      - 捷克-167.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-396.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-433.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
+      - 捷克-167.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-396.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
